refactor controller responses and services
